--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "vite preview --port 4173"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.11.0",
     "echarts": "^6.0.0",
     "element-plus": "^2.10.6",
