--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # 开发环境 - 使用 HTTP
 NODE_ENV=development
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=
 VITE_API_TIMEOUT=10000
 VITE_APP_TITLE=测试管理系统(开发)
 VITE_IGNORE_SSL=true
