fix: format execution duration using duration_ms

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ VITE_APP_TITLE=测试管理系统(开发)
 VITE_IGNORE_SSL=true
 VITE_USE_USERS_MOCK=true
 VITE_TIMESTAMP_SECRET_KEY=dev-secret-key
+VITE_ENABLE_RESULT_RECORD=true
